samples/_failures_safe/1761501522_d03e5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c53d66a.c: In function ‘primMST’:
./samples/SAFE/__tmp_7c53d66a.c:167:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  167 |     int *key
      |     ^~~
./samples/SAFE/__tmp_7c53d66a.c:167:5: error: expected declaration or statement at end of input
